# web-todo-rs

./: README.md
backend/: .env  .gitignore  Cargo.toml
backend/migrations/2018-11-16-180119_create_todo/: up.sql
backend/src/: controller.rs  db.rs  lib.rs  main.rs  model.rs  router.rs  schema.rs  show_todos.rs  view.rs
frontend/: Cargo.toml
frontend/src/: app.rs  footer.rs  header.rs  item.rs  lib.rs  list.rs  main.rs  todo.rs  todo_header.rs  todo_item.rs
frontend/static/: index.html  styles.css
