[package]
name = "web-todo-backend"
version = "0.1.0"
authors = ["pbzweihander <sd852456@naver.com>"]
autobins = false

[dependencies]
diesel = { version = "1.3.3", features = ["sqlite"] }
hyper = "0.12.14"
serde = "1.0.80"
serde_json = "1.0.33"
serde_derive = "1.0.80"
dotenv = "0.13.0"

[[bin]]
path = "src/show_todos.rs"
name = "show_todos"
